	 IRFieldChain('myJsonData', [IRField(valueType=IRJsonValue),
	 IRCompressedField, IRBase64Field]),
	 ]

	- Implement IRFixedPointField, for safely using floats in filtering and as
	indexes. You define a fixed precision (decimalPlaces) and values will
	always be represented/rounded to that many decimal places. This allows
	values to be defined in a standard away independent of platform.

-3.1.1 - Apr 15 2016
- Fix some 4.0 docs that slipped in to 3.0 series

-3.1.0 - Apr 15 2016
- Fix where on updating a model, some operations would occur outside
of a
  transaction.
- Fix "reload" method to actually work. It now returns a dict of
fields
 changed -> tuple(old value, new value)
- Allow model.saver.save to take a QueryableList (the return of
all()) by
       changing isinstance to issubclass.


3.0.2 - Apr 11 2016
	- Fix issue with binary fields, they were always seen as "changed" even
	when no update was made, which could have caused unnecessary updates and
	saves
	- When deleting single objects, do entire operation in a transaction
	in case a part fails (like if Redis server is shut down)

3.0.0 - Jan 12 2016
    - Change return type of functions that used to be a list of instantiated model objects to a QueryableList ( https://github.com/kata198/QueryableList ) which allows easilly chaining complex client-side filtering (beyond just equals and not-equals as the DB-side exists). This is not a backwards-incompatible change, but is forwards-incompatible (i.e. your code may require IndexedRedis>=3.0.0 if you choose to use the client-side filtering)
    - Restore the repr-view of bytes in __repr__ instead of the "_BINARY DATA OF LENGTH N_" format.

2.9.0 - Dec 28 2015
	- Add support for BINARY_FIELDS -- directly storing data as binary.
	This is a better option in most cases than BASE64_FIELDS, takes much
	less time, and is more space efficient
	- Implicitly make the FIELDS defined on models to be sets in __init__

2.8.1 - (Oct 06 2015)
 - Fix py3 install
